0.7/_sources/checks_gallery/tabular/train_test_validation/plot_train_test_samples_mix.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "checks_gallery/tabular/train_test_validation/plot_train_test_samples_mix.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_checks_gallery_tabular_train_test_validation_plot_train_test_samples_mix.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_checks_gallery_tabular_train_test_validation_plot_train_test_samples_mix.py:


Train Test Samples Mix
**********************
This notebook provides an overview for using and understanding the Train Test Samples Mix check.

**Structure:**

* `Why is samples mix unwanted? <#why-is-samples-mix-unwanted>`__
* `Run the check <#run-the-check>`__
* `Define a condition <#define-a-condition>`__

Why is samples mix unwanted?
=============================
Samples mix is when the train and test datasets have some samples in common.
We use the test dataset in order to evaluate our model performance, and having samples in common with the train dataset
will lead to biased metrics, which does not represent the real performance we will get in a real scenario. Therefore,
we always want to avoid samples mix.

Run the check
=============
We will run the check on the iris dataset.

.. GENERATED FROM PYTHON SOURCE LINES 24-38

.. code-block:: default


    from deepchecks.tabular import Dataset
    from deepchecks.tabular.checks import TrainTestSamplesMix
    from deepchecks.tabular.datasets.classification import iris

    # Create data with leakage from train to test
    train, test = iris.load_data()
    bad_test_df = test.data.append(train.data.iloc[[0, 1, 1, 2, 3, 4, 2, 2, 10]], ignore_index=True)
    bad_test = test.copy(bad_test_df)

    check = TrainTestSamplesMix()
    result = check.run(test_dataset=bad_test, train_dataset=train)
    result






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <!--
        ~ ----------------------------------------------------------------------------
        ~ Copyright (C) 2021-2022 Deepchecks (https://www.deepchecks.com)
        ~
        ~ This file is part of Deepchecks.
        ~ Deepchecks is distributed under the terms of the GNU Affero General
        ~ Public License (version 3 or later).
        ~ You should have received a copy of the GNU Affero General Public License
        ~ along with Deepchecks.  If not, see <http://www.gnu.org/licenses/>.
        ~ ----------------------------------------------------------------------------
        ~
    -->
    <!DOCTYPE html>
    <html lang="en">
    <head>
        <meta charset="UTF-8">
        <title>Train Test Samples Mix</title>
        <style>
            body {
                font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
                font-size: 1rem;
                line-height: 1.5;
                color: #212529;
                text-align: left;
                max-width: 1200px;
                margin: auto;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt *,
            div.nbinput.container div.input_area pre,
            div.nboutput.container div.output_area pre,
            div.nbinput.container div.input_area .highlight,
            div.nboutput.container div.output_area .highlight {
                border: none;
                padding: 0;
                margin: 0;
                box-shadow: none;
            }

            div.nbinput.container > div[class*=highlight],
            div.nboutput.container > div[class*=highlight] {
                margin: 0;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt * {
                background: none;
            }

            div.nboutput.container div.output_area .highlight,
            div.nboutput.container div.output_area pre {
                background: unset;
            }

            div.nboutput.container div.output_area div.highlight {
                color: unset;  /* override Pygments text color */
            }

            /* avoid gaps between output lines */
            div.nboutput.container div[class*=highlight] pre {
                line-height: normal;
            }

            /* input/output containers */
            div.nbinput.container,
            div.nboutput.container {
                display: -webkit-flex;
                display: flex;
                align-items: flex-start;
                margin: 0;
                width: 100%;
            }
            @media (max-width: 540px) {
                div.nbinput.container,
                div.nboutput.container {
                    flex-direction: column;
                }
            }

            /* input container */
            div.nbinput.container {
                padding-top: 5px;
            }

            /* last container */
            div.nblast.container {
                padding-bottom: 5px;
            }

            /* input prompt */
            div.nbinput.container div.prompt pre {
                color: #307FC1;
            }

            /* output prompt */
            div.nboutput.container div.prompt pre {
                color: #BF5B3D;
            }

            /* all prompts */
            div.nbinput.container div.prompt,
            div.nboutput.container div.prompt {
                width: 4.5ex;
                padding-top: 5px;
                position: relative;
                user-select: none;
            }

            div.nbinput.container div.prompt > div,
            div.nboutput.container div.prompt > div {
                position: absolute;
                right: 0;
                margin-right: 0.3ex;
            }

            @media (max-width: 540px) {
                div.nbinput.container div.prompt,
                div.nboutput.container div.prompt {
                    width: unset;
                    text-align: left;
                    padding: 0.4em;
                }
                div.nboutput.container div.prompt.empty {
                    padding: 0;
                }

                div.nbinput.container div.prompt > div,
                div.nboutput.container div.prompt > div {
                    position: unset;
                }
            }

            /* disable scrollbars on prompts */
            div.nbinput.container div.prompt pre,
            div.nboutput.container div.prompt pre {
                overflow: hidden;
            }

            /* input/output area */
            div.nbinput.container div.input_area,
            div.nboutput.container div.output_area {
                -webkit-flex: 1;
                flex: 1;
                overflow: auto;
            }
            @media (max-width: 540px) {
                div.nbinput.container div.input_area,
                div.nboutput.container div.output_area {
                    width: 100%;
                }
            }

            /* input area */
            div.nbinput.container div.input_area {
                border: 1px solid #e0e0e0;
                border-radius: 2px;
                /*background: #f5f5f5;*/
            }

            /* override MathJax center alignment in output cells */
            div.nboutput.container div[class*=MathJax] {
                text-align: left !important;
            }

            /* override sphinx.ext.imgmath center alignment in output cells */
            div.nboutput.container div.math p {
                text-align: left;
            }

            /* standard error */
            div.nboutput.container div.output_area.stderr {
                background: #fdd;
            }

            /* ANSI colors */
            .ansi-black-fg { color: #3E424D; }
            .ansi-black-bg { background-color: #3E424D; }
            .ansi-black-intense-fg { color: #282C36; }
            .ansi-black-intense-bg { background-color: #282C36; }
            .ansi-red-fg { color: #E75C58; }
            .ansi-red-bg { background-color: #E75C58; }
            .ansi-red-intense-fg { color: #B22B31; }
            .ansi-red-intense-bg { background-color: #B22B31; }
            .ansi-green-fg { color: #00A250; }
            .ansi-green-bg { background-color: #00A250; }
            .ansi-green-intense-fg { color: #007427; }
            .ansi-green-intense-bg { background-color: #007427; }
            .ansi-yellow-fg { color: #DDB62B; }
            .ansi-yellow-bg { background-color: #DDB62B; }
            .ansi-yellow-intense-fg { color: #B27D12; }
            .ansi-yellow-intense-bg { background-color: #B27D12; }
            .ansi-blue-fg { color: #208FFB; }
            .ansi-blue-bg { background-color: #208FFB; }
            .ansi-blue-intense-fg { color: #0065CA; }
            .ansi-blue-intense-bg { background-color: #0065CA; }
            .ansi-magenta-fg { color: #D160C4; }
            .ansi-magenta-bg { background-color: #D160C4; }
            .ansi-magenta-intense-fg { color: #A03196; }
            .ansi-magenta-intense-bg { background-color: #A03196; }
            .ansi-cyan-fg { color: #60C6C8; }
            .ansi-cyan-bg { background-color: #60C6C8; }
            .ansi-cyan-intense-fg { color: #258F8F; }
            .ansi-cyan-intense-bg { background-color: #258F8F; }
            .ansi-white-fg { color: #C5C1B4; }
            .ansi-white-bg { background-color: #C5C1B4; }
            .ansi-white-intense-fg { color: #A1A6B2; }
            .ansi-white-intense-bg { background-color: #A1A6B2; }

            .ansi-default-inverse-fg { color: #FFFFFF; }
            .ansi-default-inverse-bg { background-color: #000000; }

            .ansi-bold { font-weight: bold; }
            .ansi-underline { text-decoration: underline; }


            div.nbinput.container div.input_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight].math,
            div.nboutput.container div.output_area.rendered_html,
            div.nboutput.container div.output_area > div.output_javascript,
            div.nboutput.container div.output_area:not(.rendered_html) > img{
                padding: 5px;
                margin: 0;
            }

            /* fix copybtn overflow problem in chromium (needed for 'sphinx_copybutton') */
            div.nbinput.container div.input_area > div[class^='highlight'],
            div.nboutput.container div.output_area > div[class^='highlight']{
                overflow-y: hidden;
            }

            /* hide copybtn icon on prompts (needed for 'sphinx_copybutton') */
            .prompt .copybtn {
                display: none;
            }

            /* Some additional styling taken form the Jupyter notebook CSS */
            div.rendered_html table {
            border: none;
            border-collapse: collapse;
            border-spacing: 0;
            color: black;
            font-size: 12px;
            table-layout: fixed;
            }
            div.rendered_html thead {
            border-bottom: 1px solid black;
            vertical-align: bottom;
            }
            div.rendered_html tr,
            div.rendered_html th,
            div.rendered_html td {
            text-align: right;
            vertical-align: middle;
            padding: 0.5em 0.5em;
            line-height: normal;
            white-space: normal;
            max-width: none;
            border: none;
            }
            div.rendered_html th {
            font-weight: bold;
            }
            div.rendered_html tbody tr:nth-child(odd) {
            background: #f5f5f5;
            }
            div.rendered_html tbody tr:hover {
            background: rgba(66, 165, 245, 0.2);
            }
        </style>
        <script>
            (!window.navigator.onLine ? alert('needs internet connection') : '');
        </script>
    </head>
    <body>
    
    <script src="" crossorigin="anonymous"></script>
    <script type="application/vnd.jupyter.widget-state+json">
    {
      "version_major": 2,
      "version_minor": 0,
      "state": {
        "d15cda3b6141466d939f39f689d6a2cf": {
          "model_name": "VBoxModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [
              "rendered_html",
              "jp-RenderedHTMLCommon",
              "jp-RenderedHTML",
              "jp-OutputArea-output"
            ],
            "children": [
              "IPY_MODEL_e3ea7e088e224c0daa81f3ef8e2f772d",
              "IPY_MODEL_c5b537a3d2cf4dbab6ab9971c614c532",
              "IPY_MODEL_1eea96e7cee448cd818fa0d1dbe6a0c9",
              "IPY_MODEL_effb6b9324a54f8098a8b7819471f4a3"
            ],
            "layout": "IPY_MODEL_d6b3a10a1f1c4f24968527e7a8462db0"
          }
        },
        "e3ea7e088e224c0daa81f3ef8e2f772d": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_612069a60b2b4f18ad03c0d2424bb5fb",
            "style": "IPY_MODEL_5dbc12c91ff4475b990d82508fec51c0",
            "value": "<h4><b>Train Test Samples Mix</b></h4>"
          }
        },
        "612069a60b2b4f18ad03c0d2424bb5fb": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "5dbc12c91ff4475b990d82508fec51c0": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "c5b537a3d2cf4dbab6ab9971c614c532": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_f7210102283c4b4ca77e7f84eb482dad",
            "style": "IPY_MODEL_7467ec2c3e1047049c1b1477904e35fe",
            "value": "<p>Detect samples in the test data that appear also in training data.</p>"
          }
        },
        "f7210102283c4b4ca77e7f84eb482dad": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "7467ec2c3e1047049c1b1477904e35fe": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "1eea96e7cee448cd818fa0d1dbe6a0c9": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_e018cf25371b4941a0ae2a4940b0e22d",
            "style": "IPY_MODEL_27d5f8b051b6424984a0104c3fd3db2f"
          }
        },
        "e018cf25371b4941a0ae2a4940b0e22d": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "27d5f8b051b6424984a0104c3fd3db2f": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "effb6b9324a54f8098a8b7819471f4a3": {
          "model_name": "VBoxModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "children": [
              "IPY_MODEL_2deeaf9c812b404eacb242b28727582f",
              "IPY_MODEL_4f7fcf66350d4b9daa45f5f0f7729e35",
              "IPY_MODEL_c1e2506bc4f64acbad39710c13976d88"
            ],
            "layout": "IPY_MODEL_d01401cb80654540bdd2a5b4e7b8707e"
          }
        },
        "2deeaf9c812b404eacb242b28727582f": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_14182f1dc48c4550941985d02c3435ea",
            "style": "IPY_MODEL_8f95d29d1a674151ad6a6b70461459b1",
            "value": "<h5><b>Additional Outputs</b></h5>"
          }
        },
        "14182f1dc48c4550941985d02c3435ea": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "8f95d29d1a674151ad6a6b70461459b1": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "4f7fcf66350d4b9daa45f5f0f7729e35": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_a83a0b8df27b4aafbcd1e1f467ff245b",
            "style": "IPY_MODEL_6f4bd312accc4172963b3f16ad9ef6fe",
            "value": "<div>21.28% (10 / 47)                      of test data samples appear in train data</div>"
          }
        },
        "a83a0b8df27b4aafbcd1e1f467ff245b": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "6f4bd312accc4172963b3f16ad9ef6fe": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "c1e2506bc4f64acbad39710c13976d88": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_c4376c818e684deeb7843495133846e4",
            "style": "IPY_MODEL_617a9417ad08459a9dc304f30f0f3a9d",
            "value": "<style type=\"text/css\">\n#T_6e611_ table {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_6e611_ thead {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_6e611_ tbody {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_6e611_ th {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_6e611_ td {\n  text-align: left;\n  white-space: pre-wrap;\n}\n</style>\n<table id=\"T_6e611_\">\n  <thead>\n    <tr>\n      <th class=\"blank level0\" >&nbsp;</th>\n      <th class=\"col_heading level0 col0\" >sepal length (cm)</th>\n      <th class=\"col_heading level0 col1\" >sepal width (cm)</th>\n      <th class=\"col_heading level0 col2\" >petal length (cm)</th>\n      <th class=\"col_heading level0 col3\" >petal width (cm)</th>\n      <th class=\"col_heading level0 col4\" >target</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th id=\"T_6e611_level0_row0\" class=\"row_heading level0 row0\" >Train indices: 2\nTest indices: 41, 44, 45</th>\n      <td id=\"T_6e611_row0_col0\" class=\"data row0 col0\" >4.40</td>\n      <td id=\"T_6e611_row0_col1\" class=\"data row0 col1\" >2.90</td>\n      <td id=\"T_6e611_row0_col2\" class=\"data row0 col2\" >1.40</td>\n      <td id=\"T_6e611_row0_col3\" class=\"data row0 col3\" >0.20</td>\n      <td id=\"T_6e611_row0_col4\" class=\"data row0 col4\" >0</td>\n    </tr>\n    <tr>\n      <th id=\"T_6e611_level0_row1\" class=\"row_heading level0 row1\" >Train indices: 1\nTest indices: 39, 40</th>\n      <td id=\"T_6e611_row1_col0\" class=\"data row1 col0\" >4.90</td>\n      <td id=\"T_6e611_row1_col1\" class=\"data row1 col1\" >3.00</td>\n      <td id=\"T_6e611_row1_col2\" class=\"data row1 col2\" >1.40</td>\n      <td id=\"T_6e611_row1_col3\" class=\"data row1 col3\" >0.20</td>\n      <td id=\"T_6e611_row1_col4\" class=\"data row1 col4\" >0</td>\n    </tr>\n    <tr>\n      <th id=\"T_6e611_level0_row2\" class=\"row_heading level0 row2\" >Train indices: 4\nTest indices: 43</th>\n      <td id=\"T_6e611_row2_col0\" class=\"data row2 col0\" >4.90</td>\n      <td id=\"T_6e611_row2_col1\" class=\"data row2 col1\" >2.50</td>\n      <td id=\"T_6e611_row2_col2\" class=\"data row2 col2\" >4.50</td>\n      <td id=\"T_6e611_row2_col3\" class=\"data row2 col3\" >1.70</td>\n      <td id=\"T_6e611_row2_col4\" class=\"data row2 col4\" >2</td>\n    </tr>\n    <tr>\n      <th id=\"T_6e611_level0_row3\" class=\"row_heading level0 row3\" >Train indices: 0\nTest indices: 38</th>\n      <td id=\"T_6e611_row3_col0\" class=\"data row3 col0\" >5.00</td>\n      <td id=\"T_6e611_row3_col1\" class=\"data row3 col1\" >2.00</td>\n      <td id=\"T_6e611_row3_col2\" class=\"data row3 col2\" >3.50</td>\n      <td id=\"T_6e611_row3_col3\" class=\"data row3 col3\" >1.00</td>\n      <td id=\"T_6e611_row3_col4\" class=\"data row3 col4\" >1</td>\n    </tr>\n    <tr>\n      <th id=\"T_6e611_level0_row4\" class=\"row_heading level0 row4\" >Train indices: 3\nTest indices: 42</th>\n      <td id=\"T_6e611_row4_col0\" class=\"data row4 col0\" >5.00</td>\n      <td id=\"T_6e611_row4_col1\" class=\"data row4 col1\" >2.30</td>\n      <td id=\"T_6e611_row4_col2\" class=\"data row4 col2\" >3.30</td>\n      <td id=\"T_6e611_row4_col3\" class=\"data row4 col3\" >1.00</td>\n      <td id=\"T_6e611_row4_col4\" class=\"data row4 col4\" >1</td>\n    </tr>\n    <tr>\n      <th id=\"T_6e611_level0_row5\" class=\"row_heading level0 row5\" >Train indices: 30\nTest indices: 28</th>\n      <td id=\"T_6e611_row5_col0\" class=\"data row5 col0\" >5.80</td>\n      <td id=\"T_6e611_row5_col1\" class=\"data row5 col1\" >2.70</td>\n      <td id=\"T_6e611_row5_col2\" class=\"data row5 col2\" >5.10</td>\n      <td id=\"T_6e611_row5_col3\" class=\"data row5 col3\" >1.90</td>\n      <td id=\"T_6e611_row5_col4\" class=\"data row5 col4\" >2</td>\n    </tr>\n    <tr>\n      <th id=\"T_6e611_level0_row6\" class=\"row_heading level0 row6\" >Train indices: 10\nTest indices: 46</th>\n      <td id=\"T_6e611_row6_col0\" class=\"data row6 col0\" >5.80</td>\n      <td id=\"T_6e611_row6_col1\" class=\"data row6 col1\" >4.00</td>\n      <td id=\"T_6e611_row6_col2\" class=\"data row6 col2\" >1.20</td>\n      <td id=\"T_6e611_row6_col3\" class=\"data row6 col3\" >0.20</td>\n      <td id=\"T_6e611_row6_col4\" class=\"data row6 col4\" >0</td>\n    </tr>\n  </tbody>\n</table>\n"
          }
        },
        "c4376c818e684deeb7843495133846e4": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "617a9417ad08459a9dc304f30f0f3a9d": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "d01401cb80654540bdd2a5b4e7b8707e": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "d6b3a10a1f1c4f24968527e7a8462db0": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        }
      }
    }
    </script>
    <script type="application/vnd.jupyter.widget-view+json">
    {"version_major": 2, "version_minor": 0, "model_id": "d15cda3b6141466d939f39f689d6a2cf"}
    </script>

    </body>
    </html>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 39-43

Define a condition
==================
We can define a condition that enforces that the ratio of samples in test which appears in train is below a given
amount, the default is `0.1`.

.. GENERATED FROM PYTHON SOURCE LINES 43-46

.. code-block:: default

    check = TrainTestSamplesMix().add_condition_duplicates_ratio_not_greater_than()
    result = check.run(test_dataset=bad_test, train_dataset=train)
    result.show(show_additional_outputs=False)





.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <!--
        ~ ----------------------------------------------------------------------------
        ~ Copyright (C) 2021-2022 Deepchecks (https://www.deepchecks.com)
        ~
        ~ This file is part of Deepchecks.
        ~ Deepchecks is distributed under the terms of the GNU Affero General
        ~ Public License (version 3 or later).
        ~ You should have received a copy of the GNU Affero General Public License
        ~ along with Deepchecks.  If not, see <http://www.gnu.org/licenses/>.
        ~ ----------------------------------------------------------------------------
        ~
    -->
    <!DOCTYPE html>
    <html lang="en">
    <head>
        <meta charset="UTF-8">
        <title>Train Test Samples Mix</title>
        <style>
            body {
                font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
                font-size: 1rem;
                line-height: 1.5;
                color: #212529;
                text-align: left;
                max-width: 1200px;
                margin: auto;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt *,
            div.nbinput.container div.input_area pre,
            div.nboutput.container div.output_area pre,
            div.nbinput.container div.input_area .highlight,
            div.nboutput.container div.output_area .highlight {
                border: none;
                padding: 0;
                margin: 0;
                box-shadow: none;
            }

            div.nbinput.container > div[class*=highlight],
            div.nboutput.container > div[class*=highlight] {
                margin: 0;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt * {
                background: none;
            }

            div.nboutput.container div.output_area .highlight,
            div.nboutput.container div.output_area pre {
                background: unset;
            }

            div.nboutput.container div.output_area div.highlight {
                color: unset;  /* override Pygments text color */
            }

            /* avoid gaps between output lines */
            div.nboutput.container div[class*=highlight] pre {
                line-height: normal;
            }

            /* input/output containers */
            div.nbinput.container,
            div.nboutput.container {
                display: -webkit-flex;
                display: flex;
                align-items: flex-start;
                margin: 0;
                width: 100%;
            }
            @media (max-width: 540px) {
                div.nbinput.container,
                div.nboutput.container {
                    flex-direction: column;
                }
            }

            /* input container */
            div.nbinput.container {
                padding-top: 5px;
            }

            /* last container */
            div.nblast.container {
                padding-bottom: 5px;
            }

            /* input prompt */
            div.nbinput.container div.prompt pre {
                color: #307FC1;
            }

            /* output prompt */
            div.nboutput.container div.prompt pre {
                color: #BF5B3D;
            }

            /* all prompts */
            div.nbinput.container div.prompt,
            div.nboutput.container div.prompt {
                width: 4.5ex;
                padding-top: 5px;
                position: relative;
                user-select: none;
            }

            div.nbinput.container div.prompt > div,
            div.nboutput.container div.prompt > div {
                position: absolute;
                right: 0;
                margin-right: 0.3ex;
            }

            @media (max-width: 540px) {
                div.nbinput.container div.prompt,
                div.nboutput.container div.prompt {
                    width: unset;
                    text-align: left;
                    padding: 0.4em;
                }
                div.nboutput.container div.prompt.empty {
                    padding: 0;
                }

                div.nbinput.container div.prompt > div,
                div.nboutput.container div.prompt > div {
                    position: unset;
                }
            }

            /* disable scrollbars on prompts */
            div.nbinput.container div.prompt pre,
            div.nboutput.container div.prompt pre {
                overflow: hidden;
            }

            /* input/output area */
            div.nbinput.container div.input_area,
            div.nboutput.container div.output_area {
                -webkit-flex: 1;
                flex: 1;
                overflow: auto;
            }
            @media (max-width: 540px) {
                div.nbinput.container div.input_area,
                div.nboutput.container div.output_area {
                    width: 100%;
                }
            }

            /* input area */
            div.nbinput.container div.input_area {
                border: 1px solid #e0e0e0;
                border-radius: 2px;
                /*background: #f5f5f5;*/
            }

            /* override MathJax center alignment in output cells */
            div.nboutput.container div[class*=MathJax] {
                text-align: left !important;
            }

            /* override sphinx.ext.imgmath center alignment in output cells */
            div.nboutput.container div.math p {
                text-align: left;
            }

            /* standard error */
            div.nboutput.container div.output_area.stderr {
                background: #fdd;
            }

            /* ANSI colors */
            .ansi-black-fg { color: #3E424D; }
            .ansi-black-bg { background-color: #3E424D; }
            .ansi-black-intense-fg { color: #282C36; }
            .ansi-black-intense-bg { background-color: #282C36; }
            .ansi-red-fg { color: #E75C58; }
            .ansi-red-bg { background-color: #E75C58; }
            .ansi-red-intense-fg { color: #B22B31; }
            .ansi-red-intense-bg { background-color: #B22B31; }
            .ansi-green-fg { color: #00A250; }
            .ansi-green-bg { background-color: #00A250; }
            .ansi-green-intense-fg { color: #007427; }
            .ansi-green-intense-bg { background-color: #007427; }
            .ansi-yellow-fg { color: #DDB62B; }
            .ansi-yellow-bg { background-color: #DDB62B; }
            .ansi-yellow-intense-fg { color: #B27D12; }
            .ansi-yellow-intense-bg { background-color: #B27D12; }
            .ansi-blue-fg { color: #208FFB; }
            .ansi-blue-bg { background-color: #208FFB; }
            .ansi-blue-intense-fg { color: #0065CA; }
            .ansi-blue-intense-bg { background-color: #0065CA; }
            .ansi-magenta-fg { color: #D160C4; }
            .ansi-magenta-bg { background-color: #D160C4; }
            .ansi-magenta-intense-fg { color: #A03196; }
            .ansi-magenta-intense-bg { background-color: #A03196; }
            .ansi-cyan-fg { color: #60C6C8; }
            .ansi-cyan-bg { background-color: #60C6C8; }
            .ansi-cyan-intense-fg { color: #258F8F; }
            .ansi-cyan-intense-bg { background-color: #258F8F; }
            .ansi-white-fg { color: #C5C1B4; }
            .ansi-white-bg { background-color: #C5C1B4; }
            .ansi-white-intense-fg { color: #A1A6B2; }
            .ansi-white-intense-bg { background-color: #A1A6B2; }

            .ansi-default-inverse-fg { color: #FFFFFF; }
            .ansi-default-inverse-bg { background-color: #000000; }

            .ansi-bold { font-weight: bold; }
            .ansi-underline { text-decoration: underline; }


            div.nbinput.container div.input_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight].math,
            div.nboutput.container div.output_area.rendered_html,
            div.nboutput.container div.output_area > div.output_javascript,
            div.nboutput.container div.output_area:not(.rendered_html) > img{
                padding: 5px;
                margin: 0;
            }

            /* fix copybtn overflow problem in chromium (needed for 'sphinx_copybutton') */
            div.nbinput.container div.input_area > div[class^='highlight'],
            div.nboutput.container div.output_area > div[class^='highlight']{
                overflow-y: hidden;
            }

            /* hide copybtn icon on prompts (needed for 'sphinx_copybutton') */
            .prompt .copybtn {
                display: none;
            }

            /* Some additional styling taken form the Jupyter notebook CSS */
            div.rendered_html table {
            border: none;
            border-collapse: collapse;
            border-spacing: 0;
            color: black;
            font-size: 12px;
            table-layout: fixed;
            }
            div.rendered_html thead {
            border-bottom: 1px solid black;
            vertical-align: bottom;
            }
            div.rendered_html tr,
            div.rendered_html th,
            div.rendered_html td {
            text-align: right;
            vertical-align: middle;
            padding: 0.5em 0.5em;
            line-height: normal;
            white-space: normal;
            max-width: none;
            border: none;
            }
            div.rendered_html th {
            font-weight: bold;
            }
            div.rendered_html tbody tr:nth-child(odd) {
            background: #f5f5f5;
            }
            div.rendered_html tbody tr:hover {
            background: rgba(66, 165, 245, 0.2);
            }
        </style>
        <script>
            (!window.navigator.onLine ? alert('needs internet connection') : '');
        </script>
    </head>
    <body>
    

    <!-- Load require.js. Delete this if your page already loads require.js -->
    <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js" integrity="sha256-Ae2Vz/4ePdIu6ZyI/5ZGsYnb+m0JlOmKPjt6XZ9JJkA=" crossorigin="anonymous"></script>
    <script src="https://unpkg.com/@jupyter-widgets/html-manager@^0.20.1/dist/embed-amd.js" crossorigin="anonymous"></script>

    <script type="application/vnd.jupyter.widget-state+json">
    {
      "version_major": 2,
      "version_minor": 0,
      "state": {
        "39df23850133483ca98cf24378d0243c": {
          "model_name": "VBoxModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [
              "rendered_html",
              "jp-RenderedHTMLCommon",
              "jp-RenderedHTML",
              "jp-OutputArea-output"
            ],
            "children": [
              "IPY_MODEL_500718d34b594ffc9e9bf505d339fd60",
              "IPY_MODEL_de02d44040ed4946950bbe1d844c7e3d",
              "IPY_MODEL_c8a68c503773424bbc068bccea1049a7"
            ],
            "layout": "IPY_MODEL_f08e1d5445f64464a490c14524c8e5bc"
          }
        },
        "500718d34b594ffc9e9bf505d339fd60": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_99e54337f4594d8985a621c260df85fe",
            "style": "IPY_MODEL_576f7ed139124447b3cba16e08f8fec6",
            "value": "<h4><b>Train Test Samples Mix</b></h4>"
          }
        },
        "99e54337f4594d8985a621c260df85fe": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "576f7ed139124447b3cba16e08f8fec6": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "de02d44040ed4946950bbe1d844c7e3d": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_026a766dbd1540b2b7167c3373a7f441",
            "style": "IPY_MODEL_41c798437b90433bb35324ac74c89706",
            "value": "<p>Detect samples in the test data that appear also in training data.</p>"
          }
        },
        "026a766dbd1540b2b7167c3373a7f441": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "41c798437b90433bb35324ac74c89706": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "c8a68c503773424bbc068bccea1049a7": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_665d671569844f5a92dd417e32177e69",
            "style": "IPY_MODEL_72e2101087eb401da828c0a42f8fde58",
            "value": "<h5><b>Conditions Summary</b></h5><style type=\"text/css\">\n#T_24d40_ table {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_24d40_ thead {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_24d40_ tbody {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_24d40_ th {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_24d40_ td {\n  text-align: left;\n  white-space: pre-wrap;\n}\n</style>\n<table id=\"T_24d40_\">\n  <thead>\n    <tr>\n      <th class=\"col_heading level0 col0\" >Status</th>\n      <th class=\"col_heading level0 col1\" >Condition</th>\n      <th class=\"col_heading level0 col2\" >More Info</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td id=\"T_24d40_row0_col0\" class=\"data row0 col0\" ><div style=\"color: red;text-align: center\">\u2716</div></td>\n      <td id=\"T_24d40_row0_col1\" class=\"data row0 col1\" >Percentage of test data samples that appear in train data not greater than 10%</td>\n      <td id=\"T_24d40_row0_col2\" class=\"data row0 col2\" >Percent of test data samples that appear in train data: 21.28%</td>\n    </tr>\n  </tbody>\n</table>\n"
          }
        },
        "665d671569844f5a92dd417e32177e69": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "72e2101087eb401da828c0a42f8fde58": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "f08e1d5445f64464a490c14524c8e5bc": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        }
      }
    }
    </script>
    <script type="application/vnd.jupyter.widget-view+json">
    {"version_major": 2, "version_minor": 0, "model_id": "39df23850133483ca98cf24378d0243c"}
    </script>

    </body>
    </html>
    </div>
    <br />
    <br />


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  1.839 seconds)


.. _sphx_glr_download_checks_gallery_tabular_train_test_validation_plot_train_test_samples_mix.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: plot_train_test_samples_mix.py <plot_train_test_samples_mix.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: plot_train_test_samples_mix.ipynb <plot_train_test_samples_mix.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
